--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -496,5 +496,19 @@ Welcome.blade.php
         height: 50px;
         width: 50px;
     }
+    .login-input-container {
+        padding: 100px;
+        width: 90vw;
+        height: 50vh;
+    }
+
+    .login-input-container input[type="email"], .login-input-container input[type="password"] {
+        margin-top: 10px;
+        padding: 5px;
+        border-radius: 10px;
+        width: 80vw;
+        border: 1px solid #5B78D6;
+        outline: none;
+    }
 
 }
