--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
     font-family: Mona Sans;
     src: url('/public/fonts/Mona-Sans-Regular.ttf');
 }
+/* *{ border: 1px solid red; } */
 
 /*Scroll Bar*/
 /* width */
@@ -39,6 +40,8 @@
 html,
 body {
     overflow-x: hidden;
+    height: 100%;
+    min-height: 100%
 }
 
 a {
@@ -87,7 +90,9 @@ a {
     margin-right: 35px;
 
 }
-
+.list-item-container2-authenticated{
+    width: 18%;
+}
 
 .list-item-container2 li .btn-login {
     margin-right: 35px;
@@ -409,31 +414,163 @@ Welcome.blade.php
     cursor: pointer;
 }
 
-.register-input-container .radio-btn-grp input[type="radio"]:checked + .radio-label {
+.register-input-container .radio-btn-grp input[type="radio"]:checked+.radio-label {
     border: 1px solid #5B78D6;
     background-color: #D9F0FE;
 }
 
-.home-container{
+.nav-items-authenticated a{
+    color: #150F3B;
+}
+.list-item-container2-authenticated li > i{
+    color: #150F3B;
+}
+
+.home-container {
     padding: 0 5vw;
-    height: 100vh;
     background-color: #FBECE1;
 }
 
-.home-container .introductory-note{
+.home-container .introductory-note {
     padding: 15px;
     width: 100%;
-    background-color: #5B78D6;
+    background-color: #150F3B;
     box-shadow: 5px 5px #6BACFB;
 }
 
-.home-container .book-view{
+.home-container .book-view {
     padding: 15px;
     height: 65vh;
     width: 100%;
     background-color: #fff;
     box-shadow: 5px 5px #6BACFB;
 }
+
+.admin-container {
+    height: 100%;
+    background-color: #FBECE1;
+}
+
+.admin-content-container{
+    height: 100%;
+    width: 100%;
+}
+
+.admin-sidebar {
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+}
+
+.admin-sidebar-items {
+    list-style: none;
+    padding: 20px;
+}
+
+.admin-sidebar-items li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.admin-sidebar-items li a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #000;
+}
+
+.admin-sidebar-items li i {
+    width: 20px;
+    text-align: center;
+    margin-right: 10px;
+    color: #000;
+}
+
+.admin-sidebar-items li button i {
+    color: #fff;
+}
+.admin-container .stat-container{
+    padding-top: 50px;
+    width: 100%;
+}
+
+.admin-container .chart {
+    width: 100%;
+    height: 400px;
+    background-color: #fff;
+}
+
+.dashboard-card-container {
+    width: 100%;
+}
+
+.admin-container .dashboard-card {
+    height: 150px;
+    width: 220px;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: #ECF1FE 5px 5px;
+}
+
+.dashboard-card-container:nth-of-type(1) .dashboard-card:nth-of-type(1) {
+    background-color: #4976E7;
+}
+
+.dashboard-card-container:nth-of-type(1) .dashboard-card:nth-of-type(2) {
+    background-color: red;
+}
+
+.dashboard-card-container:nth-of-type(2) .dashboard-card:nth-of-type(1) {
+    background-color: orange;
+}
+
+.dashboard-card-container:nth-of-type(2) .dashboard-card:nth-of-type(2) {
+    background-color: purple;
+}
+.table-container{
+    background-color: white;
+    width: 95%;
+    height: 95%;
+    padding: 30px;
+    margin: -5rem auto;
+    border-radius: 10px;
+    box-shadow: 1px 1px lightgray;
+
+}
+table{
+    height: 70%;
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+table td , th{
+   padding: 10px;
+}
+
+table tr:nth-child(even){
+    background-color: #F2F2F2;
+}
+
+table .action-btn i{
+    cursor: pointer;
+}
+table .action-btn i:nth-of-type(1){
+    color: blue;
+}
+table .action-btn i:nth-of-type(2){
+    color: yellow;
+}
+table .action-btn i:nth-of-type(3){
+    color: red;
+}
+
+
+
+
+
+
 
 
 @media only screen and (max-width: 600px) {
@@ -514,17 +651,20 @@ Welcome.blade.php
     .register-input-container button {
         width: 20vw;
     }
+
     .register-input-container .radio-btn-grp img {
         height: 50px;
         width: 50px;
     }
+
     .login-input-container {
         padding: 100px;
         width: 90vw;
         height: 50vh;
     }
 
-    .login-input-container input[type="email"], .login-input-container input[type="password"] {
+    .login-input-container input[type="email"],
+    .login-input-container input[type="password"] {
         margin-top: 10px;
         padding: 5px;
         border-radius: 10px;
