--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
     font-family: Mona Sans;
     src: url('/public/fonts/Mona-Sans-Regular.ttf');
 }
+
 /* *{ border: 1px solid red; } */
 
 /*Scroll Bar*/
@@ -90,8 +91,10 @@ a {
     margin-right: 35px;
 
 }
-.list-item-container2-authenticated{
+
+.list-item-container2-authenticated {
     width: 18%;
+    position: relative;
 }
 
 .list-item-container2 li .btn-login {
@@ -223,34 +226,72 @@ Welcome.blade.php
     height: 100vh;
 }
 
-/*
+.guest-browse-container {
+    background-image: url('/public/pictures/wave.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+    margin-top: -100px;
+}
 
-.register-container{
-    padding-top: 150px;
-    width: 100vw;
+.guest-browse-books {
+    padding-top: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 100%;
     height: 100vh;
 }
 
-.register-input-container{
-    width: 60vw;
-    height: 70vh;
+.guest-book-view {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.browse-container {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+    margin-top: -100px;
+}
+
+.browse-books {
+    padding-top: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 100%;
+    height: 100vh;
+}
+
+
+.filter-container {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+}
+
+#reserveBook {
+    margin: 0 auto;
+}
+
+.nav-profile-image {
+}
+
+.profile-contents {
+    position: absolute;
+    background-color: #fff;
+    width: 100%;
+    height: 110px;
+    display: none;
     border-radius: 10px;
-    background: linear-gradient(rgba(91, 120, 214, .5), rgba(91, 120, 214, .5));
 }
 
-.register-input-container input[type="text"], .register-input-container input[type="email"], .register-input-container input[type="password"] {
-    margin-top: 10px;
-    padding: 5px;
-    border-radius: 10px;
-    width: 25vw;
-}
-
-.register-input-container label,
-.register-input-container p {
-    color: white;
-}
-
-*/
 .home-icon {
     color: white;
     cursor: pointer;
@@ -419,10 +460,15 @@ Welcome.blade.php
     background-color: #D9F0FE;
 }
 
-.nav-items-authenticated a{
+.nav-items-authenticated a {
     color: #150F3B;
 }
-.list-item-container2-authenticated li > i{
+
+.list-item-container2-authenticated li{
+    cursor: pointer;
+}
+
+.list-item-container2-authenticated li>i {
     color: #150F3B;
 }
 
@@ -440,10 +486,79 @@ Welcome.blade.php
 
 .home-container .book-view {
     padding: 15px;
-    height: 65vh;
+    height: 100%;
     width: 100%;
+    /* background-color: #fff;
+    box-shadow: 5px 5px #6BACFB; */
+}
+
+.card {
+    width: 90%;
+    height: 400px;
     background-color: #fff;
-    box-shadow: 5px 5px #6BACFB;
+    transition: transform 0.3s, box-shadow 0.3s;
+    border-radius: 20px;
+    position: relative;
+    border: 1px solid #4976E7;
+}
+
+.card:hover {
+    box-shadow: -6px 6px #150F3B;
+    transform: translate(10px, -10px);
+}
+
+.card i:hover {
+    cursor: pointer;
+}
+
+.card-header {
+    height: 40%;
+    width: 100%;
+    box-shadow: 0 1px rgba(0, 0, 0, .2);
+}
+
+.card-header img {
+    border-radius: 20px 20px 0 0;
+    height: 100%;
+    width: 100%;
+
+}
+
+.card-footer {
+    position: absolute;
+    bottom: 5%;
+    width: 100%;
+}
+
+.card-footer button {
+    background-color: #4976E7;
+    width: 60%;
+    border-radius: 5px;
+    padding: 5px;
+    color: #fff;
+
+}
+
+.add-favorite {
+    width: 30px;
+    height: 30px;
+    background-color: #F73157;
+    border-radius: 40px;
+}
+
+.add-favorite i {
+    color: #fff;
+}
+
+.feedback {
+    width: 30px;
+    height: 30px;
+    background-color: #2FAA8C;
+    border-radius: 40px;
+}
+
+.feedback i {
+    color: #fff;
 }
 
 .admin-container {
@@ -451,7 +566,7 @@ Welcome.blade.php
     background-color: #FBECE1;
 }
 
-.admin-content-container{
+.admin-content-container {
     height: 100%;
     width: 100%;
 }
@@ -490,7 +605,8 @@ Welcome.blade.php
 .admin-sidebar-items li button i {
     color: #fff;
 }
-.admin-container .stat-container{
+
+.admin-container .stat-container {
     padding-top: 50px;
     width: 100%;
 }
@@ -528,7 +644,8 @@ Welcome.blade.php
 .dashboard-card-container:nth-of-type(2) .dashboard-card:nth-of-type(2) {
     background-color: purple;
 }
-.table-container{
+
+.table-container {
     background-color: white;
     width: 95%;
     height: 95%;
@@ -538,31 +655,36 @@ Welcome.blade.php
     box-shadow: 1px 1px lightgray;
 
 }
-table{
+
+table {
     height: 70%;
     width: 90%;
     text-align: center;
     margin: 0 auto;
 }
 
-table td , th{
-   padding: 10px;
+table td,
+th {
+    padding: 10px;
 }
 
-table tr:nth-child(even){
+table tr:nth-child(even) {
     background-color: #F2F2F2;
 }
 
-table .action-btn i{
+table .action-btn i {
     cursor: pointer;
 }
-table .action-btn i:nth-of-type(1){
+
+table .action-btn i:nth-of-type(1) {
     color: blue;
 }
-table .action-btn i:nth-of-type(2){
+
+table .action-btn i:nth-of-type(2) {
     color: yellow;
 }
-table .action-btn i:nth-of-type(3){
+
+table .action-btn i:nth-of-type(3) {
     color: red;
 }
 
