--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -35,14 +35,18 @@
     margin: 0;
     padding: 0;
     font-family: Mona Sans;
+    /* border: 1px solid blue; */
 
 }
 
 html,
 body {
-    overflow-x: hidden;
     height: 100%;
-    min-height: 100%
+    width: 100%
+}
+
+header {
+    width: 100%;
 }
 
 a {
@@ -61,7 +65,25 @@ a:hover {
 
 nav {
     width: 100%;
+    height: 75px;
+    position: fixed;
+    top: 0;
+}
+
+.navbar-sticky {
     height: 80px;
+    background-color: rgba(0, 0, 0, .8);
+    transition: height .3s ease;
+    z-index: 999;
+
+}
+
+.nav-list-phone {
+    width: 100%;
+    background-color: #640ED8;
+    height: auto;
+    position: fixed;
+    top: 80px;
 }
 
 nav li,
@@ -75,36 +97,58 @@ a {
 }
 
 
-.list-item-container1 img {
+.navbar__list-item-container1-auth img,
+.navbar__list-item-container1-guest img {
     margin-right: 40px;
-
 }
 
-.list-item-container1 ul {
+.navbar__list-item-container1-auth ul,
+.navbar__list-item-container1-guest ul {
     display: flex;
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.list-item-container1 li {
+.navbar__list-item-container1-auth li,
+.navbar__list-item-container1-guest li {
     margin-right: 35px;
 
 }
 
-.list-item-container2-authenticated {
+.navbar__list-item-container2-auth {
     width: 18%;
     position: relative;
 }
 
-.list-item-container2 li .btn-login {
+.navbar__list-item-container1-guest {
+    height: 100%;
+}
+
+.navbar__list-item-container2-guest li .btn-login {
     margin-right: 35px;
 }
 
-.list-item-container2 .btn-register {
+.navbar__list-item-container2-guest .btn-register {
     margin-right: 15px;
     border: .5px solid white;
     padding: 5px 5px;
+}
+
+.navbar__nav-items-auth a {
+    color: #150F3B;
+}
+
+.navbar__nav-items-guest a {
+    color: #fff;
+}
+
+.navbar__list-item-container2 li {
+    cursor: pointer;
+}
+
+.navbar__list-item-container2 li>i {
+    color: #150F3B;
 }
 
 /*
@@ -117,8 +161,6 @@ Welcome.blade.php
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 1000px;
-    margin-top: -80px;
 }
 
 
@@ -233,13 +275,9 @@ Welcome.blade.php
     background-position: center;
     width: 100%;
     height: 100vh;
-    margin-top: -100px;
 }
 
 .guest-browse-books {
-    padding-top: 10%;
-    padding-left: 5%;
-    padding-right: 5%;
     width: 100%;
     height: 100vh;
 }
@@ -269,21 +307,39 @@ Welcome.blade.php
 }
 
 
-.filter-container {
+.guest-browse-books__filter-container {
     width: 100%;
     height: 100%;
     background-color: #fff;
     border-radius: 20px;
 }
 
+.guest-browse-books__filter-settings-container {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    background-color: #640ED8;
+    border-radius: 50px;
+    z-index: 9999;
+}
+
+.guest-browse-books__filter-phone-container {
+    width: 100%;
+    height: 100%;
+    background-color: #6F6EE3;
+    position: fixed;
+    overflow-y: scroll;
+    z-index: 9999;
+    color: white;
+}
+
 #reserveBook {
     margin: 0 auto;
 }
 
-.nav-profile-image {
-}
-
-.profile-contents {
+.navbar__profile-contents {
     position: absolute;
     background-color: #fff;
     width: 100%;
@@ -460,17 +516,6 @@ Welcome.blade.php
     background-color: #D9F0FE;
 }
 
-.nav-items-authenticated a {
-    color: #150F3B;
-}
-
-.list-item-container2-authenticated li{
-    cursor: pointer;
-}
-
-.list-item-container2-authenticated li>i {
-    color: #150F3B;
-}
 
 .home-container {
     padding: 0 5vw;
@@ -709,32 +754,25 @@ table .action-btn i:nth-of-type(3) {
         margin-right: 10px;
     }
 
-    .list-item-container1 {
+
+    .navbar__list-item-container1-guest {
         width: 100%;
     }
 
-    .list-item-container1 img {
+    .navbar__list-item-container1-guest img {
         margin-right: 0;
     }
 
     .start-up div:nth-of-type(1):not(.input-container) {
         padding-left: 5px;
-        width: 100vw;
+        width: 100%;
         text-align: center;
     }
 
-    .start-up h1 {
-        font-size: 26px;
 
-    }
-
-    .start-up h4 {
-        font-size: 16px;
-
-    }
 
     .input-container {
-        width: 100vw;
+        width: 100%;
         padding-left: 5px;
 
     }
@@ -762,6 +800,19 @@ table .action-btn i:nth-of-type(3) {
         margin-right: 0;
 
     }
+
+    .guest-browse-books__filter-container {
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        border-radius: 20px;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+
 
     .register-input-container {
         width: 100vw;
