--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -176,12 +176,6 @@ Welcome.blade.php
 
 
 
-.start-up-container h3 {
-    margin-bottom: 10px;
-    margin-right: 5px;
-
-}
-
 .start-up-container input[type="text"] {
     font-size: 16px;
     padding: 10px;
@@ -220,7 +214,7 @@ Welcome.blade.php
 }
 
 
-.login-page {
+.login-section {
     background-image: url('/public/pictures/wave.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -410,7 +404,7 @@ Welcome.blade.php
     color: #5B78D6;
 }
 
-.login-container {
+.login-section__login-container {
     padding-top: 100px;
     width: 100vw;
     height: 100vh;
@@ -420,9 +414,8 @@ Welcome.blade.php
     display: none;
 }
 
-.login-input-container {
+.login-section__login-input-container {
     background: white;
-    padding: 100px;
     width: 50vw;
     height: 50vh;
     border-radius: 10px;
@@ -430,8 +423,8 @@ Welcome.blade.php
 
 }
 
-.login-input-container input[type="submit"],
-.login-input-container button,
+.login-section__login-input-container input[type="submit"],
+.login-section__login-input-container button,
 .register-input-container button {
     background-color: #5B78D6;
     color: white;
@@ -440,22 +433,22 @@ Welcome.blade.php
     cursor: pointer;
 }
 
-.login-input-container input[type="submit"]:hover {
+.login-section__login-input-container input[type="submit"]:hover {
     box-shadow: 1px 1px #5B78D6;
 }
 
-.login-input-container label,
-.login-input-container p {
+.login-section__login-input-container label,
+.login-section__login-input-container p {
     color: black;
 }
 
-.login-input-container a {
+.login-section__login-input-container a {
     color: #5B78D6;
 }
 
-.login-input-container input[type="email"],
-.login-input-container input[type="password"] {
-    margin-top: 10px;
+.login-section__login-input-container input[type="email"],
+.login-section__login-input-container input[type="password"],
+.login-section__login-input-container input[type="text"] {
     padding: 5px;
     border-radius: 10px;
     width: 40vw;
@@ -464,10 +457,17 @@ Welcome.blade.php
 
 }
 
-.login-input-container input[type="email"]:focus,
-.login-input-container input[type="password"]:focus {
+.login-section__login-input-container input[type="email"]:focus,
+.login-section__login-input-container input[type="password"]:focus
+.login-section__login-input-container input[type="text"]:focus
+{
     border: 2px solid #6BACFB;
 
+}
+
+.login-section__login-input-container .login-section__login-input-group i.fa-eye-slash{
+    margin-left: -30px;
+    cursor: pointer;
 }
 
 .register-input-container input[type="radio"] {
@@ -736,7 +736,7 @@ table .action-btn i:nth-of-type(3) {
         margin-right: 0;
     }
 
-    .start-up-container{
+    .start-up-container {
         padding-top: 50%;
     }
 
@@ -761,42 +761,40 @@ table .action-btn i:nth-of-type(3) {
         border-radius: 20px;
     }
 
-    .card {
+    .login-section__login-input-container {
+        width: 90%;
+    }
+
+    .login-section__login-input-container input[type="email"],
+    .login-section__login-input-container input[type="password"],
+    .login-section__login-input-container input[type="text"]  {
         width: 100%;
+
+    }
+    
+
+    .login-section__login-input-container input[type="submit"],
+    .login-section__login-input-container button,
+    .register-input-container button {
+        width: 20%;
     }
 
 
+    .card {
+        width: 100%;
+    }
 
     .register-start-up-container__input-container {
         width: 100vw;
         height: 70vh;
     }
 
-    .login-start-up-container__input-container input[type="submit"],
-    .login-start-up-container__input-container button,
-    .register-start-up-container__input-container button {
-        width: 20vw;
-    }
 
     .register-start-up-container__input-container .radio-btn-grp img {
         height: 50px;
         width: 50px;
     }
 
-    .login-start-up-container__input-container {
-        padding: 100px;
-        width: 90vw;
-        height: 50vh;
-    }
 
-    .login-start-up-container__input-container input[type="email"],
-    .login-start-up-container__input-container input[type="password"] {
-        margin-top: 10px;
-        padding: 5px;
-        border-radius: 10px;
-        width: 80vw;
-        border: 1px solid #5B78D6;
-        outline: none;
-    }
 
 }
