--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -577,6 +577,18 @@ Welcome.blade.php
     border: 1px solid #150F3B;
 }
 
+.home-container__book-request-container{
+    border: 1px solid black;
+    transition: transform .3s, box-shadow .3s ;
+}
+
+.home-container__book-request-container:hover{
+    border: 1px solid #150F3B;
+    box-shadow: -6px 6px #150F3B;
+    transform: translate(10px, -10px);
+    cursor: pointer;
+}
+
 .home-container__card {
     width: 90%;
     height: 400px;
@@ -668,6 +680,30 @@ Welcome.blade.php
 .fa-book-open-reader{
     color: #5B78D6;
 }
+
+.modal-pending-status-container{
+    background-color: white;
+    border: 2px solid orange;
+    color: orange;
+    transform: rotate(-10deg);
+}
+
+.modal-accept-status-container{
+    background-color: white;
+    border: 2px solid #37C70E;
+    color: #37C70E;
+    transform: rotate(-10deg);
+}
+
+.modal-decline-status-container{
+    background-color: white;
+    border: 2px solid #F70E0E;
+    color: #F70E0E;
+    transform: rotate(-10deg);
+}
+
+
+
 .reserve-input{
     border: 1px solid #640ED8;
     border-radius: 10px;
