--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -759,6 +759,7 @@ Welcome.blade.php
 
 .admin-container {
     height: 100%;
+    width: 100%;
     background-color: #FBECE1;
 }
 
@@ -767,40 +768,73 @@ Welcome.blade.php
     width: 100%;
 }
 
-.admin-sidebar {
+.admin-sidebar-container{
+    width:30%;
+    height: 100%;
+    transition: .3s ease-in-out;
+}
+
+.admin-sidebar-container--toggle{
+    width:5%;
+    transition: .3s ease-in-out;
+}
+
+.admin-sidebar{
     background-color: #fff;
     width: 100%;
     height: 100%;
+    border-radius: 0 20px 20px;
+    transition: .3s ease-in-out;
+
 }
+
+
+
 
 .admin-sidebar-items {
     list-style: none;
-    padding: 20px;
 }
-
-.admin-sidebar-items li {
+.admin-sidebar-heading {
+    color: #757575 ;
+}
+.admin-sidebar-items li.admin-sidebar-subheading {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
 }
 
-.admin-sidebar-items li a {
-    display: flex;
-    align-items: center;
+.admin-sidebar-items a {
     text-decoration: none;
-    color: #000;
+    color: #757575;
 }
 
-.admin-sidebar-items li i {
+.admin-sidebar-items i {
     width: 20px;
     text-align: center;
     margin-right: 10px;
-    color: #000;
+    color: #757575;
+}
+.admin-sidebar-subheading:hover{
+    background-color: #F0F0F0;
+    border-radius: 10px;
+}
+
+.admin-sidebar--active{
+    background-color: #D9D9FF;
+    border-radius: 10px;
+}
+
+.admin-sidebar--active a{
+    color: #7174FF;
+}
+.admin-sidebar--active i{
+    color: #7174FF;
 }
 
 .admin-sidebar-items li button i {
     color: #fff;
 }
+
+
 
 .admin-container .stat-container {
     padding-top: 50px;
@@ -845,8 +879,6 @@ Welcome.blade.php
     background-color: white;
     width: 95%;
     height: 95%;
-    padding: 30px;
-    margin: -5rem auto;
     border-radius: 10px;
     box-shadow: 1px 1px lightgray;
 
@@ -854,14 +886,14 @@ Welcome.blade.php
 
 table {
     height: 70%;
-    width: 90%;
+    width: 95%;
     text-align: center;
     margin: 0 auto;
 }
 
 table td,
 th {
-    padding: 10px;
+    padding: 1.5rem;
 }
 
 table tr:nth-child(even) {
